--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-contries-toolkit",
+  "name": "react-countries-toolkit",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
