--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -28,8 +28,8 @@ jobs:
           path: ~/.npm
           # hashFiles('**/package-lock.json') - check valid cache or not
           key: node-modules-${{ hashFiles('**/package-lock.json') }}
-      # Install dependecies using
-      - name: Install dependecies
+      # Install dependencies using
+      - name: Install dependencies
         run: npm ci
       # Run lint
       - name: Lint application
@@ -46,7 +46,7 @@ jobs:
           path: ~/.npm
           # hashFiles('**/package-lock.json') - check valid cache or not
           key: node-modules-${{ hashFiles('**/package-lock.json') }}
-      - name: Install dependecies
+      - name: Install dependencies
         run: npm ci
       # Run tests
       - name: Prettier check
@@ -62,7 +62,7 @@ jobs:
         with:
           path: ~/.npm
           key: node-modules-${{ hashFiles('**/package-lock.json') }}
-      - name: Install dependecies
+      - name: Install dependencies
         run: npm ci
       # Run tests
       - name: Test application
@@ -92,7 +92,7 @@ jobs:
           path: ~/.npm
           # hashFiles('**/package-lock.json') - check valid cache or not
           key: node-modules-${{ hashFiles('**/package-lock.json') }}
-      - name: Install dependecies
+      - name: Install dependencies
         run: npm ci
       # Build
       - name: Build application
